; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_zign.c_addVarsZign.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_zign.c_addVarsZign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [23 x i8] c"error: invalid syntax\0A\00", align 1
@free = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i8*, i32)* @addVarsZign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @addVarsZign(%struct.TYPE_3__* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 0, i32* %10, align 4
  %13 = load i32, i32* %9, align 4
  %14 = icmp slt i32 %13, 1
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = call i32 @eprintf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %5, align 4
  br label %45

17:                                               ; preds = %4
  %18 = load i64, i64* @free, align 8
  %19 = trunc i64 %18 to i32
  %20 = call i32* @r_list_newf(i32 %19)
  store i32* %20, i32** %11, align 8
  store i32 0, i32* %10, align 4
  br label %21

21:                                               ; preds = %32, %17
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* %9, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %35

25:                                               ; preds = %21
  %26 = load i32*, i32** %11, align 8
  %27 = load i8*, i8** %8, align 8
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @r_str_word_get0(i8* %27, i32 %28)
  %30 = call i32 @r_str_new(i32 %29)
  %31 = call i32 @r_list_append(i32* %26, i32 %30)
  br label %32

32:                                               ; preds = %25
  %33 = load i32, i32* %10, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %10, align 4
  br label %21

35:                                               ; preds = %21
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i8*, i8** %7, align 8
  %40 = load i32*, i32** %11, align 8
  %41 = call i32 @r_sign_add_vars(i32 %38, i8* %39, i32* %40)
  store i32 %41, i32* %12, align 4
  %42 = load i32*, i32** %11, align 8
  %43 = call i32 @r_list_free(i32* %42)
  %44 = load i32, i32* %12, align 4
  store i32 %44, i32* %5, align 4
  br label %45

45:                                               ; preds = %35, %15
  %46 = load i32, i32* %5, align 4
  ret i32 %46
}

declare dso_local i32 @eprintf(i8*) #1

declare dso_local i32* @r_list_newf(i32) #1

declare dso_local i32 @r_list_append(i32*, i32) #1

declare dso_local i32 @r_str_new(i32) #1

declare dso_local i32 @r_str_word_get0(i8*, i32) #1

declare dso_local i32 @r_sign_add_vars(i32, i8*, i32*) #1

declare dso_local i32 @r_list_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
